kyc/04-kyc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ers-kyc-service
  name: ers-kyc-service
  namespace: ers
spec:
  ports:
    - port: 8297
      nodePort: 30009
      protocol: TCP
      targetPort: 8297
  selector:
    app: ers-kyc
  type: NodePort
