kyc/06-kyc-istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kyc-service-gateway
  namespace: ers
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8297
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kyc-service-virtualservice
  namespace: ers
spec:
  hosts:
  - "*"
  gateways:
  - kyc-service-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ers-kyc-service 
        port:
          number: 8297
